# doqo-rs

./: .gitignore  Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
common/: Cargo.toml
common/src/: documentation.rs  generator.rs  lib.rs  plugin.rs  processor.rs  registry.rs  session.rs  source.rs  symbol.rs
common/tests/: generate_bindings.rs
frontend/: README.md  package-lock.json  package.json  svelte.config.js
frontend/src/lib/: highlighter.svelte.ts  utils.ts
frontend/src/lib/components/: CodeBlock.svelte  SearchBar.svelte  SymbolBreadcrumbs.svelte  SymbolCard.svelte  SymbolLink.svelte
frontend/src/routes/: +error.svelte  +layout.svelte  +layout.ts
frontend/src/routes/[...fqid]/: +page.svelte
frontends/svelte/: package-lock.json  package.json  tailwind.config.js
frontends/svelte/src/lib/: utils.ts
frontends/svelte/src/lib/components/: CodeBlock.svelte  Documentation.svelte  SearchBar.svelte  SymbolBreadcrumbs.svelte  SymbolCard.svelte  SymbolLink.svelte
frontends/svelte/src/routes/: +layout.svelte
frontends/svelte/src/routes/[...fqid]/: +page.svelte
generators/svelte/: Cargo.toml
input/: .doqoignore  in.rs
input/docs/: registry.json
input/ignored/: ignored.rs
input/subdirectory/: other.rs
languages/elixir/: Cargo.toml
languages/python/: Cargo.toml
languages/rust/: Cargo.toml
plugins/rust/src/: handlers.rs  lib.rs  plugin.rs  processor.rs
src/: main.rs
src.old/: main.rs
