[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
common = { workspace = true }
rust = { path = "../plugins/rust" }
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
rust-embed = "8.11.0"
tokio = { version = "1.52.1", features = ["full"]}
open = "5.3.4"
warp = { version = "0.4.2", features = ["server"] }
