[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
tree-sitter = { workspace = true }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
ts-rs = "12.0.1"
globset = "0.4.18"
walkdir = "2.5.0"
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true